REGRESSION(r270185) [GTK] Some webgl failures after multivalue setter refactor https://bugs.webkit.org/show_bug.cgi?id=219340

Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2021-03-15
Reviewed by Simon Fraser.

Construct the simulated vertex attrib 0 buffer GCGLSpan with correct size -- the
pointer is GCGLfloat, so the length should be the count of floats.

No new tests, tested by the regressed tests:
fast/canvas/webgl/gl-bind-attrib-location-test.html
fast/canvas/webgl/gl-bind-attrib-mapped-names.html
webgl/1.0.3/conformance/attribs/gl-disabled-vertex-attrib.html
webgl/1.0.3/conformance/extensions/angle-instanced-arrays-out-of-bounds.html
webgl/1.0.3/conformance/programs/gl-bind-attrib-location-long-names-test.html
webgl/1.0.3/conformance/programs/gl-bind-attrib-location-test.html
webgl/1.0.3/conformance/rendering/draw-elements-out-of-bounds.html

* html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::WebGLRenderingContextBase::simulateVertexAttrib0):

Canonical link: https://commits.webkit.org/235277@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274410 268f45cc-cd09-0410-ab3c-d52691b4dbfc